--- a/android-app/app/src/main/res/layout/view_browse3_items.xml
+++ b/android-app/app/src/main/res/layout/view_browse3_items.xml
@@ -95,7 +95,7 @@
                 android:layout_height="match_parent" android:gravity="center" android:orientation="vertical" android:padding="8dp">
                 <TextView android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:text="색상"
-                    android:textColor="#999999" android:textSize="14sp" android:fontFamily="@font/pretendardmedium"/>
+                    android:textColor="@color/text1" android:textSize="14sp" android:fontFamily="@font/pretendardmedium"/>
                 <com.google.android.material.imageview.ShapeableImageView
                     android:layout_width="50dp" android:layout_height="50dp" android:layout_marginTop="8dp"
                     android:scaleType="centerCrop" android:src="@drawable/yellowhite"
